--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://buddhsbhushan.github.io/portpolio2/">Buddhabhushan Bhagat</a></h1>
+                  <h1 id="colorlib-logo"><a href="https://buddhsbhushan.github.io/portpolio/">Buddhabhushan Bhagat</a></h1>
                   <p><strong>B.tech-IT, RIT Islampur</strong></p>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -44,6 +44,7 @@
                      <ul>
                         <li><a href="#" data-nav-section="about">About</a></li>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
+                        <li><a href="#" data-nav-section="education">Education</a></li>
                         <li><a href="#" data-nav-section="experience">Work Experience</a></li>
                         <li><a href="#" data-nav-section="contact">Contact</a></li>
                      </ul>
@@ -51,7 +52,7 @@
                </nav>
             </aside>
             <!--- Github ribbon ----------->
-            <a href="https://github.com/vinaysomawat/vinaysomawat.github.io" class="github-corner" aria-label="View source on GitHub">
+            <a href="https://github.com/buddhsbhushan/portpolio" class="github-corner" aria-label="View source on GitHub">
                <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
                   <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
                   <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
