--- a/android.html
+++ b/android.html
@@ -41,7 +41,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://buddhsbhushan.github.io/portpolio2/">Buddhabhushan Bhagat</a></h1>
+                  <h1 id="colorlib-logo"><a href="https://buddhsbhushan.github.io/portpolio/">Buddhabhushan Bhagat</a></h1>
                   <p><strong>Android Developer</strong></p>
                </div>
             </aside>
