--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                   </div>
                </section>
                <!-- Education -->
- <section class="colorlib-experience" data-section="experience">
+ <section class="colorlib-experience" data-section="education">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
