--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                        <i class="fa fa-code"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2>JNV Washim<span>Teenage </span></h2>
+                                       <h2>JNV Washim <span>Teenage</span></h2>
                                        <p>Science<br>HSC: 71%<br>SSC: 9.4/10 CGPA
                                         </p>
                                        <p></p>
@@ -410,10 +410,10 @@
                                     <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/r194dME8y"><img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Buy me a coffee"><span style="margin-left:5px">Buy me a coffee</span></a>
                                     <br><br> -->
                                     <h2 style="text-align: center; margin-bottom: 0px;">These are some of my profiles</h2>
-                                    <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/Vinay_Somawat" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.linkedin.com/in/vinasomawat/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.quora.com/profile/Vinay-Somawat" style="color: black;" class="fa fa-quora"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://github.com/vinaysomawat" style="color: black;" class="fa fa-github"></a>
+                                    <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/buddhabhushanb8" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://www.linkedin.com/in/bhushan-bhagat-56398b128/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://www.quora.com/profile/Buddhabhushan-Bhagat" style="color: black;" class="fa fa-quora"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://github.com/buddhsbhushan" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
                                  <p style="text-align: center; margin-bottom: -20px;"> <strong>Copyrights&copy; Buddhabhushan Bhagat</strong></p>
