--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                        <p><strong>Software Developer</strong><br>Back-end development with Laravel, Managed to complete successfully more than 3 projects<br>Majorly my work involves:<br>
                                        – Designing and writing HTTP-REST APIs.<br>
                                        – Writing template code for full-stack Web and Android/IOS applications.<br>
-                                       – Setting up job queues for multiple monitoring tasks.<br>
+                                       – Scheduling tasks with cron<br>
                                        Developed PHP module for sending programmable SMS.<br>
                                        Added Implementation to optimize database queries, page load time, serving time, build time.
                                         </p>
