--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                               <h3 style="font-weight: 500;">PHP/Laravel</h3>
                               <div class="progress">
                                  <div class="progress-bar color-3" role="progressbar" aria-valuenow="20"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                    aria-valuemin="0" aria-valuemax="100" style="width:85%">
                                     <span>85%</span>
                                  </div>
                               </div>
@@ -224,11 +224,11 @@
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Java/Android</h3>
+                              <h3 style="font-weight: 500;">Java</h3>
                               <div class="progress">
                                  <div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
-                                    <span>50%</span>
+                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                    <span>70%</span>
                                  </div>
                               </div>
                            </div>
@@ -238,8 +238,8 @@
                               <h3 style="font-weight: 500;">MySQL</h3>
                               <div class="progress">
                                  <div class="progress-bar color-6" role="progressbar" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                                    <span>50%</span>
+                                    aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                                    <span>100%</span>
                                  </div>
                               </div>
                            </div>
@@ -250,7 +250,7 @@
                               <div class="progress">
                                  <div class="progress-bar color-7" role="progressbar" aria-valuenow="70"
                                     aria-valuemin="0" aria-valuemax="100" style="width:75%">
-                                    <span>70%</span>
+                                    <span>75%</span>
                                  </div>
                               </div>
                            </div>
