--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <h2>Contact</h2>
                               <hr>
-                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: buddhsbhushan@gmail.com">buddhsbhushan@gmail.com</a></strong></p>
+                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: bhagatbuddhabhushan@gmail.com">bhagatbuddhabhushan@gmail.com</a></strong></p>
                               <p>Visit my blog <strong><a href="https://programmingdairies.github.io/">programming dairies.</a></strong></p>
                            </div>
                         </div>
