--- a/webdev.html
+++ b/webdev.html
@@ -76,7 +76,7 @@
                                  <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=DeveloperAtYourDoor&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
                                  <iframe src="https://ghbtns.com/github-btn.html?user=vinaysomawat&repo=DeveloperAtYourDoor&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
                                  <hr> -->
-                                 <h4><a href="https://buddhsbhushan.github.io/portpolio2/">Web-Portfolio</a></h4>
+                                 <h4><a href="https://github.com/buddhsbhushan/buddhsbhushan.github.io/">Web-Portfolio</a></h4>
                                  <p>Web Portfolio to showcase projects and skills in better manner. <br>
                                     <strong>Technologies Used: </strong>HTML/CSS/JavaScript
                                  </p>
