--- a/index.html
+++ b/index.html
@@ -200,6 +200,17 @@
                               </div>
                            </div>
                         </div> -->
+                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">SpringBoot</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-2" role="progressbar" aria-valuenow="87"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:87%">
+                                    <span>87%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <h3 style="font-weight: 500;">HTML/Bootstrap</h3>
