--- a/index.html
+++ b/index.html
@@ -360,12 +360,28 @@
                                     </div>
                                     <div class="timeline-label">
                                        <h2><a href="#">Tudip Technologies</a> <span>July 2019 - February 2020</span></h2>
-                                       <p><strong>Software Developer</strong><br>Back-end development with Laravel, Managed to complete successfully more than 3 projects<br>Majorly my work involves:<br>
+                                       <p><strong>Associate Project Engineer</strong><br>Back-end development with Laravel, Managed to complete successfully more than 3 projects<br>Majorly my work involves:<br>
                                        – Designing and writing HTTP-REST APIs.<br>
                                        – Writing template code for full-stack Web and Android/IOS applications.<br>
                                        – Scheduling tasks with cron<br>
                                        Developed PHP module for sending programmable SMS.<br>
                                        Added Implementation to optimize database queries, page load time, serving time, build time.
+                                        </p>
+                                       <p></p>
+                                    </div>
+                                 </div>
+                              </article>
+                              <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+                                 <div class="timeline-entry-inner">
+                                    <div class="timeline-icon color-2">
+                                       <i class="fa fa-globe"></i>
+                                    </div>
+                                    <div class="timeline-label">
+                                       <h2><a href="#">Mindtree Ltd.</a> <span>April 2021 - Present</span></h2>
+                                       <p><strong>Software Developer</strong><br>Working as a full-stack engineer with Java, Spring Boot, and Microservices.<br>Majorly my work involves:<br>
+                                       – Contributed to different phases like requirement engineering, design, and development of the software-based upon client requirements.<br>
+                                       – Designed and developed a Restful APIs for different modules in the project as per the requirement.<br>
+                                       – SWorked on Spring MVC Architecture for web applications. And Involved in JUnit Testing, debugging, and bug fixing.<br>
                                         </p>
                                        <p></p>
                                     </div>
