--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                               <div class="progress">
                                  <div class="progress-bar color-3" role="progressbar" aria-valuenow="30"
                                     aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                                    <span>30%</span>
+                                    <span>80%</span>
                                  </div>
                               </div>
                            </div>
@@ -239,7 +239,7 @@
                               <div class="progress">
                                  <div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
                                     aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                    <span>70%</span>
+                                    <span>90%</span>
                                  </div>
                               </div>
                            </div>
@@ -440,7 +440,7 @@
                                     <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/buddhabhushanb8" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://www.linkedin.com/in/bhushan-bhagat-56398b128/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://www.quora.com/profile/Buddhabhushan-Bhagat" style="color: black;" class="fa fa-quora"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://github.com/buddhsbhushan" style="color: black;" class="fa fa-github"></a>
+                                       <a href="https://github.com/buddhabhushanbhagat" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
                                  <p style="text-align: center; margin-bottom: -20px;"> <strong>Copyrights&copy; Buddhabhushan Bhagat</strong></p>
