--- a/webdev.html
+++ b/webdev.html
@@ -65,7 +65,7 @@
                                   <hr>
                                   <h4><a href="https://github.com/buddhabhushanbhagat/Angular-remitter-frontend">Remitter Beneficiary Fund transfer</a></h4>
                                  <p>Designed and Developed Full stack web application to manage beneficiaries and fund transfer from remitter functionality.<br>
-                                    <strong>Technologies Used: </strong>Java Spring BOOT,  <h5><a href="https://github.com/buddhabhushanbhagat/microservice-project">Microservices</a></h5>, RESTFUL API, TOMCAT, DATA JPA, ANGULAR, CONTENTFUL, BOOTSTRAP, MYSQL
+                                    <strong>Technologies Used: </strong> <h5><a href="https://github.com/buddhabhushanbhagat/microservice-project">Microservices</a></h5> Java Spring BOOT, RESTFUL API, TOMCAT, DATA JPA, ANGULAR, CONTENTFUL, BOOTSTRAP, MYSQL
                                  </p>
                                  <hr>
                                  <hr>
